--- a/exercicioModulo3.html
+++ b/exercicioModulo3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício Módulo 3 - HTML</title>
+    <title>Exercício Módulo 3</title>
 </head>
 <body>
     <header>
