fix: correção label for e input id

--- a/exercicioModulo3.html
+++ b/exercicioModulo3.html
@@ -12,14 +12,14 @@
     </header>
     <main>
         <form action="">
-            <label for="email">Digite seu Nome</label>
-            <input type="text" placeholder="Seu Nome">
+            <label for="nome">Digite seu Nome</label>
+            <input id="nome" type="text" placeholder="Seu Nome">
             <br>
             <label for="email">Digite seu Email</label>
-            <input type="email" placeholder="seu@email.com">
+            <input id="email" type="email" placeholder="seu@email.com">
             <br>
-            <label for="email">Digite sua Senha</label>
-            <input type="password" placeholder="suaSenha@!">
+            <label for="senha">Digite sua Senha</label>
+            <input id="senha" type="password" placeholder="suaSenha@!">
             <br><br>
             <button type="submit">
                 Cadastrar
